LogicalAnd and LogicalOr now passes the context